--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
-    "@types/react-datepicker": "^6.2.0",
     "@types/socket.io-client": "^1.4.36",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.1",
@@ -27,7 +26,7 @@
     "qrcode": "^1.5.3",
     "razorpay": "^2.9.6",
     "react": "19.1.0",
-    "react-datepicker": "^8.7.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
